# autoclassifier

./: README.md  pyproject.toml
script/: run.py
src/autoclassifier/: learner.py  oracle.py  util.py
